# ddcalc

./: .gitignore  CMakeLists.txt
src/: cai.cpp  cai.cpp~  cai.h  cai.h~  ddcalc  ddcalc.cpp  ddcalc.cpp~  faultedhelicalturn.cpp  faultedhturn.xml  helicalturn.cpp  helicalturn.cpp~  helicalturn.h  helicalturn.h~  helicalturn2.cpp  helicalturn2.h  node.cpp  node.cpp~  node.h  node.h~  port.h~  result.txt  segment.cpp  segment.cpp~  segment.h  segment.h~  segment2.cpp  segment2.cpp~  segment2.h  segment2.h~  test  testfturn  testsfaulted.cpp  testsfaulted.cpp~  xmltools.cpp~  xmltools.h~
src/Eigen/src/plugins/: #CommonCwiseBinaryOps.h#  .#CommonCwiseBinaryOps.h
